# playground

appwrite-function/functions/test/: README.md
embedded/blink-check/: Cargo.toml  rust-toolchain.toml
embedded/blink-check/src/: main.rs
embedded/embassy-join-test/: Cargo.toml
embedded/embassy-join-test/src/: main.rs  myjoin.rs
embedded/embassy-nrf-esb-test/: Cargo.toml  run.sh
embedded/embassy-nrf-esb-test/.cargo/: config.toml
embedded/embassy-nrf-esb-test/src/: lib.rs  main.rs
embedded/embassy-renode-test/: Cargo.toml  memory.x  start.resc
embedded/embassy-renode-test-sd/: Cargo.toml  README.md  memory.x  start.resc
embedded/embassy-renode-test-sd/src/: main.rs
embedded/embassy-renode-test/src/: main.rs
embedded/embedded-graphics-rktk-test/: Cargo.toml
embedded/embedded-graphics-rktk-test/src/: images.rs  main.rs  rotate.rs
embedded/nrf-softdevice-test/: Cargo.toml  build.bat
embedded/nrf-softdevice-test/.cargo/: config.toml
embedded/nrf-trouble-test/: Cargo.toml  build.bat
embedded/nrf52840-ws2812-test/: Cargo.toml  build.bat
embedded/nrf52840-ws2812-test/src/: main.rs
embedded/trouble-repro/: Cargo.toml  memory-nrf52840.x
embedded/trouble-repro/.cargo/: config.toml
embedded/trouble-repro/src/: app.rs  main.rs
gui/blitz-test/: Cargo.toml
gui/gpui-component-test/: Cargo.toml
gui/gpui-component-test/src/: main.rs
keyhook/: .neoconf.json  Cargo.toml
keyhook/src/: main.rs
other/chromparint-rust/: .gitignore  Cargo.toml
other/chromparint-rust/src/: main.rs
other/typst-plugin/typst-greet/: sample.typ
other/typst-plugin/typst-pure/: Cargo.toml  sample.typ
other/typst-plugin/typst-pure/src/: lib.rs
strava/: .gitignore
strava/src/: auth.ts  const.ts
typst-plugin/: README.md
typst-plugin/typst-excel/: Book1.xlsx  Cargo.toml  sample.typ
typst-plugin/typst-excel/src/: lib.rs
typst-plugin/typst-greet/: Cargo.toml
typst-plugin/typst-minimal-plugin/: Cargo.toml  sample.typ
typst-plugin/typst-minimal-plugin/src/: lib.rs
web/appwrite-function/: appwrite.json
web/strava/: .neoconf.json
web/strava/src/: db.ts  main.ts  reverse-geocoding.ts
windows/keyhook/: README.md
windows/wsl-automount/: automount-hide-start.toml  automount.ps1
