[package]
name = "embassy-join-test"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-32768",
  "arch-std",
  "executor-thread",
  "log",
] }
embassy-futures = { version = "0.1.1", features = ["log"] }
embassy-time = { version = "0.4.0", features = ["log", "std"] }
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
