cargo-features = ["profile-rustflags"]

[package]
edition = "2021"
name = "esb-test"
version = "0.1.0"
authors = ["nazo6 <git@nazo6.dev>"]
resolver = "2"

[lib]
test = false
bench = false

[[bin]]
name = "ptx"
test = false
bench = false

[[bin]]
name = "prx"
test = false
bench = false

[dependencies]
defmt = "1.0.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.8", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-sync = { version = "0.7.0" }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.6.0", features = [
  "defmt",
  "nrf52840",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-nrf-esb = { version = "0.1.0", path = "../../../../lib/embassy-nrf-esb", features = [
  "fast-ru",
  "defmt",
] }
nrf-pac = { version = "0.1.0", features = ["defmt"] }
embassy-futures = "0.1.1"
defmt-embassy-usb-logger = { version = "0.1.0", path = "../../../../lib/defmt-embassy-usb-logger" }

[features]
_check = []
