[package]
name = "trouble-repro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
trouble-host = { path = "../../../../clones/trouble/host", version = "0.1.0", features = [
  "security",
  "defmt",
] }

embassy-executor = { version = "0.7", default-features = false, features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-time = { version = "0.4", default-features = false, features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.3", default-features = false, features = [
  "defmt",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "rt",
] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6", features = ["defmt"] }

futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
nrf-sdc = { version = "0.1.0", default-features = false, features = [
  "defmt",
  "peripheral",
  "central",
] }
nrf-mpsl = { version = "0.1.0", default-features = false, features = [
  "defmt",
  "critical-section-impl",
] }
bt-hci = { version = "0.2", default-features = false, features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }
static_cell = "2"
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }

[profile.release]
debug = 2

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "551a95436e999b4290b4a33383aa3d6747b63dd9" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "551a95436e999b4290b4a33383aa3d6747b63dd9" }
bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", rev = "3755da87d0ef8660c5f9d4694b928ad7f679299a" }

[features]
default = ["nrf52840"]
nrf52832 = [
  "embassy-executor/task-arena-size-32768",
  "embassy-nrf/nrf52832",
  "nrf-sdc/nrf52832",
]
nrf52833 = [
  "embassy-executor/task-arena-size-32768",
  "embassy-nrf/nrf52833",
  "nrf-sdc/nrf52833",
]
nrf52840 = [
  "embassy-executor/task-arena-size-65536",
  "embassy-nrf/nrf52840",
  "nrf-sdc/nrf52840",
]
